changed "Select Form Design" to just "Select Form" Files modified - [newFormDialog.html,newFormDialog.variables.json]

--- a/src/main/webapp/pages/newFormDialog/newFormDialog.html
+++ b/src/main/webapp/pages/newFormDialog/newFormDialog.html
@@ -23,9 +23,9 @@
         <wm-gridrow name="gridrow3">
             <wm-gridcolumn columnwidth="12" name="gridcolumn5">
                 <wm-composite name="composite4" show="bind:!!Variables.svFormTypes.dataSet.content.length" padding="unset unset 1em unset">
-                    <wm-label class="col-md-3 form-control-static" name="label19" caption="Select Form Design" width="160px" fontweight="bold"></wm-label>
+                    <wm-label class="col-md-3 form-control-static" name="label19" caption="Select Form" width="160px" fontweight="bold"></wm-label>
                     <wm-container class="col-md-9" name="container3" width="240px">
-                        <wm-select name="selectForm" dataset="bind:Variables.svFormTypes.dataSet" datafield="ID" displayfield="FormType" placeholder="Select Form Design"></wm-select>
+                        <wm-select name="selectForm" dataset="bind:Variables.svFormTypes.dataSet" datafield="ID" displayfield="FormType" placeholder="Select Form"></wm-select>
                     </wm-container>
                 </wm-composite>
             </wm-gridcolumn>
