--- a/src/main/webapp/pages/UserOpenForms/UserOpenForms.html
+++ b/src/main/webapp/pages/UserOpenForms/UserOpenForms.html
@@ -41,7 +41,7 @@
                                                     <wm-grid-column binding="formTitle" caption="Form Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="createdBy" caption="Created By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="municipalityName" caption="Municipality" type="string" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==='Standard'" readonly="false"></wm-grid-column>
-                                                    <wm-grid-column binding="formDesign" caption="Form Design" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                    <wm-grid-column binding="formDesign" caption="Form" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="formStatus" caption="Form Status" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="subdivision" caption="Subdivision" type="string" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==='Homebuilder'" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="lot" caption="Lot" type="string" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==='Homebuilder'" readonly="false"></wm-grid-column>
@@ -62,7 +62,7 @@
                             <wm-tabpane name="tabpaneDrafts" title="Drafts">
                                 <wm-panel iconclass="wi wi-warning" autoclose="outsideClick" name="panelDraft" title="Unsubmitted Drafts" class="panel-primary">
                                     <wm-grid editmode="inline" title="" dataset="bind:Variables.Cx2FormDraftData.dataSet" navigation="Classic" name="grid2" filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL">
-                                        <wm-grid-column binding="formTypes.formType" caption="Form Design" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="FormTypes"></wm-grid-column>
+                                        <wm-grid-column binding="formTypes.formType" caption="Form" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="FormTypes"></wm-grid-column>
                                         <wm-grid-column binding="dateCreated" caption="Date Created" type="datetime" generator="assigned" readonly="true" edit-widget-type="datetime" show="true" filterwidget="date">{{row.getProperty('dateCreated') | toLocalDateString}}</wm-grid-column>
                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false"
                                         searchable="false" show="true"></wm-grid-column>
