--- a/src/main/webapp/pages/CXAdmin/CXAdmin.html
+++ b/src/main/webapp/pages/CXAdmin/CXAdmin.html
@@ -139,7 +139,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn34">
                                         <wm-label caption="Global Code Sets" class="p" fontsize="1.4" fontunit="em" name="label20"></wm-label>
-                                        <wm-label caption="bind:Variables.svCountOfGlobalCodeList.dataSet[$i].countCodeList" fontsize="3" fontunit="em" class="p" name="label21"></wm-label>
+                                        <wm-label caption="bind:Variables.svCountOfCXCodeSetsGlobal.dataSet[$i]._count" fontsize="3" fontunit="em" class="p" name="label21"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
