--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -90,7 +90,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn27_1" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Code Sets" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.svCountOfMunicipalityCodeList.firstRecord.countCodeList" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.svCountOfMunicipalityCodeSets.dataSet[$i]._count" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
